# model_controllers_set_unit_account_relation_req.go
@@ -1,0 +1,170 @@
+/*
+Rainbow-API
+
+Conflux-Pay API documentation
+
+API version: 1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package confluxpay
+
+import (
+	"encoding/json"
+)
+
+// checks if the ControllersSetUnitAccountRelationReq type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ControllersSetUnitAccountRelationReq{}
+
+// ControllersSetUnitAccountRelationReq struct for ControllersSetUnitAccountRelationReq
+type ControllersSetUnitAccountRelationReq struct {
+	BankAccountNbr string `json:"bank_account_nbr"`
+	UnitAccountNbr string `json:"unit_account_nbr"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _ControllersSetUnitAccountRelationReq ControllersSetUnitAccountRelationReq
+
+// NewControllersSetUnitAccountRelationReq instantiates a new ControllersSetUnitAccountRelationReq object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewControllersSetUnitAccountRelationReq(bankAccountNbr string, unitAccountNbr string) *ControllersSetUnitAccountRelationReq {
+	this := ControllersSetUnitAccountRelationReq{}
+	this.BankAccountNbr = bankAccountNbr
+	this.UnitAccountNbr = unitAccountNbr
+	return &this
+}
+
+// NewControllersSetUnitAccountRelationReqWithDefaults instantiates a new ControllersSetUnitAccountRelationReq object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewControllersSetUnitAccountRelationReqWithDefaults() *ControllersSetUnitAccountRelationReq {
+	this := ControllersSetUnitAccountRelationReq{}
+	return &this
+}
+
+// GetBankAccountNbr returns the BankAccountNbr field value
+func (o *ControllersSetUnitAccountRelationReq) GetBankAccountNbr() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.BankAccountNbr
+}
+
+// GetBankAccountNbrOk returns a tuple with the BankAccountNbr field value
+// and a boolean to check if the value has been set.
+func (o *ControllersSetUnitAccountRelationReq) GetBankAccountNbrOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.BankAccountNbr, true
+}
+
+// SetBankAccountNbr sets field value
+func (o *ControllersSetUnitAccountRelationReq) SetBankAccountNbr(v string) {
+	o.BankAccountNbr = v
+}
+
+// GetUnitAccountNbr returns the UnitAccountNbr field value
+func (o *ControllersSetUnitAccountRelationReq) GetUnitAccountNbr() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.UnitAccountNbr
+}
+
+// GetUnitAccountNbrOk returns a tuple with the UnitAccountNbr field value
+// and a boolean to check if the value has been set.
+func (o *ControllersSetUnitAccountRelationReq) GetUnitAccountNbrOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.UnitAccountNbr, true
+}
+
+// SetUnitAccountNbr sets field value
+func (o *ControllersSetUnitAccountRelationReq) SetUnitAccountNbr(v string) {
+	o.UnitAccountNbr = v
+}
+
+func (o ControllersSetUnitAccountRelationReq) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ControllersSetUnitAccountRelationReq) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["bank_account_nbr"] = o.BankAccountNbr
+	toSerialize["unit_account_nbr"] = o.UnitAccountNbr
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *ControllersSetUnitAccountRelationReq) UnmarshalJSON(bytes []byte) (err error) {
+	varControllersSetUnitAccountRelationReq := _ControllersSetUnitAccountRelationReq{}
+
+	if err = json.Unmarshal(bytes, &varControllersSetUnitAccountRelationReq); err == nil {
+		*o = ControllersSetUnitAccountRelationReq(varControllersSetUnitAccountRelationReq)
+	}
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(bytes, &additionalProperties); err == nil {
+		delete(additionalProperties, "bank_account_nbr")
+		delete(additionalProperties, "unit_account_nbr")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+type NullableControllersSetUnitAccountRelationReq struct {
+	value *ControllersSetUnitAccountRelationReq
+	isSet bool
+}
+
+func (v NullableControllersSetUnitAccountRelationReq) Get() *ControllersSetUnitAccountRelationReq {
+	return v.value
+}
+
+func (v *NullableControllersSetUnitAccountRelationReq) Set(val *ControllersSetUnitAccountRelationReq) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableControllersSetUnitAccountRelationReq) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableControllersSetUnitAccountRelationReq) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableControllersSetUnitAccountRelationReq(val *ControllersSetUnitAccountRelationReq) *NullableControllersSetUnitAccountRelationReq {
+	return &NullableControllersSetUnitAccountRelationReq{value: val, isSet: true}
+}
+
+func (v NullableControllersSetUnitAccountRelationReq) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableControllersSetUnitAccountRelationReq) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
